--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <script src="facturacion.js"></script>
     <title>Facturación de Consulta Oftalmológica</title>
   </head>
   <body>
@@ -28,6 +27,109 @@
       <div class="row">
         <div class="col-12 main-div">
           <form class="formulario">
+            <div class="formulario-metadata">
+              <label
+                for="exampleFormControlInput1"
+                class="form-label"
+                id="fecha"
+                ><h2>Fecha</h2></label
+              >
+              <input
+                autocomplete="off"
+                type="text"
+                class="form-control"
+                id="fecha"
+                required
+              />
+              <label
+                for="exampleFormControlInput1"
+                class="form-label"
+                id="idMedico"
+                ><h2>ID Médico</h2></label
+              >
+              <input
+                autocomplete="off"
+                type="text"
+                class="form-control"
+                id="idMedico"
+                required
+              />
+              <label
+                for="exampleFormControlInput1"
+                class="form-label"
+                id="nombreMedico"
+                ><h2>Nombre Médico</h2></label
+              >
+              <input
+                autocomplete="off"
+                type="text"
+                class="form-control"
+                id="nombreMedico"
+                required
+              />
+            </div>
+            <div class="formulario-p">
+              <label
+                for="exampleFormControlInput1"
+                class="form-label"
+                id="idPaciente"
+                ><h2>ID Paciente</h2></label
+              >
+              <input
+                autocomplete="off"
+                type="text"
+                class="form-control"
+                id="idPaciente"
+                required
+              />
+              <label
+                for="exampleFormControlInput1"
+                class="form-label"
+                id="nombre"
+                ><h2>Nombre Paciente</h2></label
+              >
+              <input
+                autocomplete="off"
+                type="text"
+                class="form-control"
+                id="nombre"
+                required
+              />
+              <label
+                for="exampleFormControlInput1"
+                class="form-label"
+                id="apellido"
+                ><h2>Apellido Paciente</h2></label
+              >
+              <input
+                autocomplete="off"
+                type="text"
+                class="form-control"
+                id="apellido"
+                required
+              />
+              <label for="exampleFormControlInput1" class="form-label" id="tel"
+                ><h2>Teléfono Paciente</h2></label
+              >
+              <input
+                autocomplete="off"
+                type="text"
+                class="form-control"
+                id="tel"
+              />
+              <label
+                for="exampleFormControlInput1"
+                class="form-label"
+                id="email"
+                ><h2>Email Paciente</h2></label
+              >
+              <input
+                autocomplete="off"
+                type="text"
+                class="form-control"
+                id="email"
+              />
+            </div>
             <div class="formulario-p">
               <h2>Tipo de Consulta</h2>
               <select id="consulta" class="form-select">
@@ -49,15 +151,15 @@
                 <option value="5">Ecometría</option>
                 <option value="6">Ecografía</option>
                 <option value="7">
-                  Láser. crío, diatermia de baja complejidad
+                  Láser, crío, diatermia de baja complejidad
                 </option>
-                <option value="8">Fuera de Cápita - Paquimetría</option>
-                <option value="9">Fuera de Cápita - OCT</option>
+                <option value="8">Paquimetría</option>
+                <option value="9">OCT</option>
                 <option value="10">
-                  Fuera de Cápita - Tomografía confocal del nervio óptico
+                  Tomografía confocal del nervio óptico
                 </option>
-                <option value="11">Fuera de Cápita - Tomografía corneal</option>
-                <option value="12">Fuera de Cápita - UBM</option>
+                <option value="11">Tomografía corneal</option>
+                <option value="12">UBM</option>
               </select>
             </div>
             <div class="formulario-p">
@@ -77,56 +179,15 @@
                 <option value="10">FacoVitrectomía</option>
               </select>
             </div>
-            <div class="formulario-p">
-              <label
-                for="exampleFormControlInput1"
-                class="form-label"
-                id="idPaciente"
-                ><h2>ID Paciente</h2></label
-              >
-              <input type="id" class="form-control" id="idPaciente" required />
-              <label
-                for="exampleFormControlInput1"
-                class="form-label"
-                id="nombre"
-                ><h2>Nombre Paciente</h2></label
-              >
-              <input type="nombre" class="form-control" id="nombre" required />
-              <label
-                for="exampleFormControlInput1"
-                class="form-label"
-                id="apellido"
-                ><h2>Apellido Paciente</h2></label
-              >
-              <input
-                type="apellido"
-                class="form-control"
-                id="apellido"
-                required
-              />
-              <label for="exampleFormControlInput1" class="form-label" id="tel"
-                ><h2>Teléfono Paciente</h2></label
-              >
-              <input type="tel" class="form-control" id="tel" />
-              <label
-                for="exampleFormControlInput1"
-                class="form-label"
-                id="email"
-                ><h2>Email Paciente</h2></label
-              >
-              <input type="email" class="form-control" id="email" />
-              <label
-                for="exampleFormControlInput1"
-                class="form-label"
-                id="idMedico"
-                ><h2>ID Médico</h2></label
-              >
-              <input type="id" class="form-control" id="idMedico" required />
-            </div>
-            <div class="formulario-b">
+            <div class="formulario-btn">
               <button type="submit" class="btn-formulario">Enviar</button>
             </div>
           </form>
+          <div class="history">
+            <h2>Consultas de Hoy</h2>
+            <ul id="listaPacientesFecha"></ul>
+            <div id="recaudacionTotal"></div>
+          </div>
         </div>
       </div>
     </main>
@@ -135,6 +196,7 @@
         <h2>by M.Ticchetti</h2>
       </div>
     </footer>
+    <script src="facturacion.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
