--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 >
                 <input
                   autocomplete="off"
-                  type="text"
+                  type="date"
                   class="form-control"
                   id="fecha"
                   required
@@ -196,6 +196,8 @@
         <h2>by M.Ticchetti</h2>
       </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="facturacion.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
