--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
           <h2>Consultas de Hoy</h2>
           <ul id="listaPacientesFecha"></ul>
         </div>
+        <div class="info"></div>
       </div>
     </main>
     <footer class="footer">
