--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </header>
     <main class="main">
       <div class="row">
+        <div class="info"></div>
         <div class="col-12 main-div">
           <form class="formulario" id="form">
             <div>
@@ -189,7 +190,9 @@
           <h2>Consultas de Hoy</h2>
           <ul id="listaPacientesFecha"></ul>
         </div>
-        <div class="info"></div>
+      </div>
+      <div class="getPost">
+        <table class="getPostTable"></table>
       </div>
     </main>
     <footer class="footer">
