--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
         <ul id="listaPacientesFecha"></ul>
       </div>
       <div class="getPost">
+        <div class="hidePost"></div>
         <table class="getPostTable"></table>
       </div>
     </main>
